# simple_text

./: .env.example  .gitignore  CLAUDE.md  README.md  commands.md  evaluate.sh  evaluate_baseline.sh  evaluate_finetune.sh  evaluate_finetune_extra.sh  evaluate_finetune_with_ignored_data.sh  evaluate_finetune_with_rag.sh  evaluate_raw_model.sh  evaluate_raw_model_rag.sh  evaluate_raw_model_rag_postedit.sh  evaluate_rerank.sh  pyproject.toml  run.sh  run_finetune.sh  run_finetune_rag.sh  run_local.sh  run_qwen35_2b.sh  run_qwen35_4b.sh
cochrane/: README.md  alignment.py  load_data.py  preprocessing.py  requirements.txt  utils.py
cochrane/data/: MedSimplify.csv  cochrane_docs_test.csv  cochrane_docs_val.csv  cochrane_para_test.csv  cochrane_sents_test.csv  cochraneauto_docs_test.csv  cochraneauto_docs_train.csv  cochraneauto_docs_val.csv  cochraneauto_para_test.csv  cochraneauto_para_train.csv  cochraneauto_para_val.csv  cochraneauto_sents_rephrase_test.csv  cochraneauto_sents_rephrase_train.csv  cochraneauto_sents_rephrase_val.csv  cochraneauto_sents_test.csv  cochraneauto_sents_train.csv  cochraneauto_sents_val.csv
docs/: METHODS.md  METRICS.md
experiments/sentence_level/: IMPROVEMENT_PLAN.md  build_external_rephrase.py  build_reranker_data.py  finetune.py  reranker.pkl  run_baseline.py  run_week1_prompts.sh  sari_metric.py  simplify_sentence.py  test_reranker.py  train_reranker.py
outputs/: simpletext-task1-improvement.provenance.md  simpletext-task1-rerank-experiment.md
outputs/.drafts/: simpletext-task1-improvement-cited.md  (+3 more)
src/: __init__.py  config.py
(+80 files in other folders)
