[project]
name = "simple-text"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "easse",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.0",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]

[tool.uv.sources]
easse = { git = "https://github.com/feralvam/easse.git" }
