[project]
name = "simple-text"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "evaluate>=0.4.0",
    "sacremoses>=0.1.0",
    "numpy>=1.26,<2.3",
    "pandas>=2.0,<3.0",
    "python-dotenv>=1.0.0",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]

[tool.uv.sources]
